# tome

./: Cargo.toml  README.md  flake.nix
benches/: benchmark.rs
nix/checks/: default.nix  doc.nix
nix/pkgs/: default.nix
nix/pkgs/tome/: default.nix
nix/shell/: default.nix
nix/shell/vale/: default.nix  vale.ini
src/: cli.rs  main.rs
src/lib/: mod.rs  plugin.rs
src/lib/plugin/: fetcher.rs  mod.rs  parser.rs
