[package]
name = "tome"
version = "0.1.0"
edition = "2024"

[dependencies]

[dev-dependencies]
criterion = "0.8.0"
proptest = "1.9.0"
proptest-derive = "0.7.0"

[lib]
name = "libtome"
path = "src/lib/mod.rs"

[[bin]]
name = "tome"
path = "src/main.rs"

[profile.release]
strip = true
lto = true
codegen-units = 1
incremental = true
panic = "abort"
